# sphinx

./: CMakeLists.txt  Makefile.in  README.md  acinclude.m4  configure  configure.ac  sphinx.spec  sphinx10.sln  sphinx12.sln  sphinx15.sln
api/: sphinxapi.php  sphinxapi.py  test2.py
api/java/: SphinxClient.java
api/libsphinxclient/: sphinxclient.c  sphinxclient.h  (+1 more)
cmake/: select_library_dir.cmake
config/: config.h.in  config_cmake.h.in
doc/: indexer.1  indextool.1  manpages.xml  mk.cmd  search.1  searchd.1  spelldump.1  sphinx.html  sphinx.txt  sphinx.xml
mysqlse/: ha_sphinx.cc  ha_sphinx.h  snippets_udf.cc
src/: Makefile.am  Makefile.in  indexer.cpp  indextool.cpp  llsphinxql.c  search.cpp  searchd.cpp  searchdaemon.h  searchdha.cpp  searchdha.h  spelldump.cpp  sphinx.cpp  sphinx.h  sphinxaot.cpp  sphinxexcerpt.cpp  sphinxexcerpt.h  sphinxexpr.cpp  sphinxexpr.h  sphinxexpr.y  sphinxfilter.cpp  sphinxfilter.h  sphinxint.h  sphinxjson.cpp  sphinxjson.h  sphinxjson.y  sphinxmetaphone.cpp  sphinxql.l  sphinxql.y  sphinxquery.cpp  sphinxquery.h  sphinxrt.cpp  sphinxrt.h  sphinxsearch.cpp  sphinxsearch.h  sphinxselect.y  sphinxsort.cpp  sphinxstd.cpp  sphinxstd.h  sphinxstem.h  sphinxstemru.cpp  (+13 more)
test/: helpers.inc  ubertest.php
win/: indexer12.vcxproj  indexer15.vcxproj  indextool12.vcxproj  indextool15.vcxproj  libsphinx12.vcxproj  libsphinx15.vcxproj  search12.vcxproj  searchd12.vcxproj  searchd15.vcxproj  spelldump12.vcxproj  spelldump15.vcxproj  testrt12.vcxproj  testrt15.vcxproj  tests12.vcxproj  tests15.vcxproj  wordbreaker10.vcxproj  wordbreaker15.vcxproj
(+40 files in other folders)
